--- a/pinterest/css/main.css
+++ b/pinterest/css/main.css
@@ -15,7 +15,7 @@ body {
 	-webkit-column-fill: auto;
 	-moz-column-count: 3;
 	-moz-column-gap: 10px;
-	-moz-column-fill: auto;
+	/*-moz-column-fill: auto;*/
 	column-count: 3;
 	column-gap: 15px;
 	column-fill: auto;
