--- a/bookmark/css/main.css
+++ b/bookmark/css/main.css
@@ -7,8 +7,8 @@
   border: 2px solid #CCCCCC;
   border-radius: 8px;
   font-size: 24px;
-  height: 30px;
-  line-height: 30px;
+  height: 40px;
+  line-height: 40px;
   outline: medium none;
   padding: 8px 12px;
   width: 396px;
@@ -46,3 +46,8 @@
 .tt-suggestion p {
   margin: 0;
 }
+
+#search {
+  margin-top:15px; 
+}
+
