--- a/pinterest/css/main.css
+++ b/pinterest/css/main.css
@@ -13,20 +13,12 @@ body {
 	margin: 50px auto;
 }*/
 
-#wrap {  
+#wrap {
 	margin: 20px auto;
 	display: block;
 	width: 300px;
 	height: 310px;
 	padding:20px;
-
-	background: #f3f3f3;
-	border: 1px solid #fff;
-	border-radius: 5px;
-
-	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
 
 #columns {
@@ -59,6 +51,9 @@ body {
 	-moz-transition: all .2s ease;
 	-o-transition: all .2s ease;
 	transition: all .2s ease;
+
+	-moz-border-radius: 1em 4em 1em 4em;
+	border-radius: 2em 4em 2em 4em;
 }
 
 .pin img {
