--- a/_includes/pinterest_head.html
+++ b/_includes/pinterest_head.html
@@ -9,15 +9,11 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script type="text/javascript" src="{{"js/typeahead.min.js"}}"></script>
-  <script type="text/javascript" src="{{"js/bootstrap.min.js"}}"></script>
-  <script type="text/javascript" src="{{"js/main.js"}}"></script>
-
-  <link rel="stylesheet" href="{{"css/main.css"}} ">
-  <link rel="stylesheet" href="{{"css/bootstrap.min.css"}}">
+  <link rel="stylesheet" href="{{"css/main.css"}}">
+  <script src="{{"js/jquery.min.js"}}"></script>
+  <script src="{{"js/main.js"}}"></script>
 
   <meta charset=utf-8 />
-  <title>Bookmark</title>
+  <title>List all sites</title>
 </head>
 
