--- a/euromillions4/css/main.css
+++ b/euromillions4/css/main.css
@@ -1,3 +1,15 @@
+
+@media screen and(max-width: 320px) {
+    @viewport {
+        width: 320px;
+    }
+}
+@media screen and(min-width: 768px) and(max-width: 959px) {
+    @viewport {
+        width: 768px;
+    }
+}
+
 ul.balls {
     float: left;
     overflow: hidden;
