--- a/lesrestos/css/main.css
+++ b/lesrestos/css/main.css
@@ -1,3 +1,17 @@
+*{
+  margin:0;
+  padding:0;
+  list-style:none;
+  border:none;
+}
+
+body
+{
+	font-size: 10px;
+	font-family: verdana, arial, sans-serif;
+  padding 20px 0;
+}
+
 #map {
     min-height: 400px;
     min-width: 300px;
